Anonymous | Login | 2021-01-26 06:22 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0024161 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2013-09-10 18:10 | 2015-05-14 16:25 | ||||
Reporter | Mauro Mariotti | ||||||||
Assigned To | bugmaster | ||||||||
Priority | high | Severity | crash | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | Windows | OS | VC++ 2010 | OS Version | 64 bit | ||||
Product Version | [OCCT] 6.6.0 | ||||||||
Target Version | [OCCT] 6.9.0 | Fixed in Version | [OCCT] 6.9.0 | ||||||
Summary | 0024161: boolean operation hanging | ||||||||
Description | any boolean operation between these two solids seems never to end | ||||||||
Steps To Reproduce | restore MirrorSolids.brep m explode m bop m_1 m_2 | ||||||||
Additional information and documentation updates | Even bopargcheck gets stuck | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs modalg_6(011) bug24161 | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|
(0025622) emv (developer) 2013-09-18 09:36 |
Fix for the issue 24140 solves the problem. |
(0025625) Mauro Mariotti (reporter) 2013-09-18 11:40 |
Access to issue 24140 is denied to me. May I know something about it? Thanks. Mauro |
(0025626) abv (manager) 2013-09-18 11:48 |
Hello Mauro, The issue #24140 contains customer data and thus cannot be made publicly available. However, you can see the fix made for that issue in the Git repository (e.g. in GitWeb: http://git.dev.opencascade.org/gitweb/?p=occt.git;a=commitdiff;h=d0561b82c03ae62a5ed905079609b9e2a1bb99be [^]), thus you can try the fix if you wish. Note that current status of the issue is 'resolved' which means is had not yet passed testing. |
(0025634) mkv (tester) 2013-09-18 16:10 |
Dear BugMaster, Test case bugs/modalg_5(010)/bug24161 was pushed to CR24140 git repository (see #24140 ) bugs modalg_5(010) bug24161 is OK in CR24140. |
(0025876) mkv (tester) 2013-10-03 15:39 edited on: 2013-10-03 15:41 |
Dear BugMaster, the issue CR24140_3 (#0024140) is not solves the problem CR24161 |
(0025885) emv (developer) 2013-10-04 09:53 |
The problem is in the intersection part restore MirrorSolids.brep b explode b; copy b_1 b1; copy b_2 b2 explode b1 f; copy b1_2 b1 explode b2 f; copy b2_3 b2 don b1 b2 mksurface s1 b1 mksurface s2 b2 #intersection with default tolerance value intersect i s1 s2 #result is ok #intersection with the tolerance values of faces intersect i s1 s2 1.e-4 #endless loop |
(0025889) ifv (developer) 2013-10-04 11:32 |
Julia, check please this bug for your fix for suppressing infinite loops in intersector |
(0039580) git (administrator) 2015-04-10 15:24 |
Branch CR24161 has been created by nbv. SHA-1: cdb8b046c85a31ca1f6ca435ab074d9402ce5c9d Detailed log of new commits: Author: nbv Date: Fri Apr 10 15:23:45 2015 +0300 0024161: boolean operation hanging The reason of hanging has been eliminate. |
(0039581) git (administrator) 2015-04-10 15:24 |
Branch CR24161 has been updated forcibly by nbv. SHA-1: 83a56911f5f38b2c79583262d2a2d85e7de8dfd7 |
(0039799) git (administrator) 2015-04-15 17:40 |
Branch CR24161 has been updated forcibly by nbv. SHA-1: b0c7a23deccedd9128e689ab0bc1dbdcf54925e0 |
(0040263) git (administrator) 2015-04-27 10:37 |
Branch CR24161 has been updated forcibly by nbv. SHA-1: 9cd09e88d8ee10c7705b2005f9fda3cb3c3e5fac |
(0040264) nbv (developer) 2015-04-27 10:40 |
Dear Mikhail! Please review CR24161 branch. |
(0040279) git (administrator) 2015-04-27 15:16 |
Branch CR24161 has been updated forcibly by nbv. SHA-1: a47985abd8e11f31fc707992263b6147623dab1d |
(0040280) msv (developer) 2015-04-27 15:18 |
Reviewed. |
(0040349) mkv (tester) 2015-04-28 14:52 |
Dear BugMaster, Branch CR24161 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: a47985abd8e11f31fc707992263b6147623dab1d Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR24161-master-occt-64/Debian60-64/bugs/modalg_6/bug24161.html [^] http://occt-tests/CR24161-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug24161.html [^] bugs modalg_6(011) bug24161: OK Testing on Linux: occt component : Total MEMORY difference: 95257379 / 94524891 [+0.77%] Total CPU difference: 52836.84999999945 / 51017.469999999455 [+3.57%] products component : Total MEMORY difference: 23794689 / 23790395 [+0.02%] Total CPU difference: 17090.969999999987 / 17221.91999999996 [-0.76%] Testing on Windows: occt component : Total MEMORY difference: 57253315 / 57266605 [-0.02%] Total CPU difference: 15835.583509499073 / 15810.95095159897 [+0.16%] products component : Total MEMORY difference: 15601315 / 15605919 [-0.03%] Total CPU difference: 6227.559919999981 / 6275.40542669997 [-0.76%] There are no differences in images found by testdiff. |
(0040350) git (administrator) 2015-04-28 14:52 |
Branch CR24161 has been updated by mkv. SHA-1: 51ae65fda03ac88493df7c6bc5d0a6433014a4d9 Detailed log of new commits: Author: mkv Date: Tue Apr 28 14:51:47 2015 +0300 Test case for issue CR24161 |
(0040351) mkv (tester) 2015-04-28 14:53 |
Dear nbv, could you please review following test case bugs modalg_6(011) bug24161 |
(0040353) git (administrator) 2015-04-28 15:22 |
Branch CR24161 has been updated forcibly by nbv. SHA-1: 9ac7e9a40200d631d4104eea671cb7c951a1cb54 |
(0040354) nbv (developer) 2015-04-28 15:24 |
bugs modalg_6(011) bug24161 reviewed with small correction. Dear Mikhail, Please amend "Test case number" field in bug description: modalg_5 -> modalg_6. |
(0040365) mkv (tester) 2015-04-28 16:32 |
Dear BugMaster, Branch CR24161 is TESTED. |
(0040939) git (administrator) 2015-05-14 16:25 |
Branch CR24161 has been deleted by inv. SHA-1: 9ac7e9a40200d631d4104eea671cb7c951a1cb54 |
![]() |
|||
occt: master 6b5b88d7
Timestamp: 2015-04-30 10:57:03 Author: nbv Committer: bugmaster [ Details ] [ Diff ] |
0024161: boolean operation hanging The reason of hanging has been eliminated. Test case for issue CR24161 Small correction of test case for this issue |
||
mod - src/IntWalk/IntWalk_PWalking.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/modalg_6/bug24161 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2013-09-10 18:10 | Mauro Mariotti | New Issue | |
2013-09-10 18:10 | Mauro Mariotti | Assigned To | => ifv |
2013-09-10 18:10 | Mauro Mariotti | File Added: MirrorSolids.brep | |
2013-09-13 11:48 | ifv | Assigned To | ifv => emv |
2013-09-18 09:29 | emv | Relationship added | related to 0024140 |
2013-09-18 09:36 | emv | Note Added: 0025622 | |
2013-09-18 09:36 | emv | Assigned To | emv => mkv |
2013-09-18 09:36 | emv | Status | new => resolved |
2013-09-18 11:40 | Mauro Mariotti | Note Added: 0025625 | |
2013-09-18 11:48 | abv | Note Added: 0025626 | |
2013-09-18 16:10 | mkv | Note Added: 0025634 | |
2013-09-18 16:10 | mkv | Test case number | => bugs modalg_5(010) bug24161 |
2013-10-03 15:39 | mkv | Note Added: 0025876 | |
2013-10-03 15:41 | mkv | Note Edited: 0025876 | View Revisions |
2013-10-03 15:43 | mkv | Assigned To | mkv => emv |
2013-10-03 15:43 | mkv | Status | resolved => assigned |
2013-10-04 09:53 | emv | Note Added: 0025885 | |
2013-10-04 09:53 | emv | Assigned To | emv => ifv |
2013-10-04 11:32 | ifv | Note Added: 0025889 | |
2013-10-04 11:32 | ifv | Assigned To | ifv => jgv |
2013-10-04 11:32 | ifv | Status | assigned => feedback |
2013-10-09 14:33 | jgv | Status | feedback => assigned |
2015-04-10 12:18 | nbv | Assigned To | jgv => nbv |
2015-04-10 15:24 | git | Note Added: 0039580 | |
2015-04-10 15:24 | git | Note Added: 0039581 | |
2015-04-15 17:40 | git | Note Added: 0039799 | |
2015-04-27 10:37 | git | Note Added: 0040263 | |
2015-04-27 10:40 | nbv | Note Added: 0040264 | |
2015-04-27 10:40 | nbv | Assigned To | nbv => msv |
2015-04-27 10:40 | nbv | Status | assigned => resolved |
2015-04-27 15:16 | git | Note Added: 0040279 | |
2015-04-27 15:18 | msv | Note Added: 0040280 | |
2015-04-27 15:18 | msv | Assigned To | msv => bugmaster |
2015-04-27 15:18 | msv | Status | resolved => reviewed |
2015-04-27 15:26 | mkv | Assigned To | bugmaster => mkv |
2015-04-28 14:52 | mkv | Note Added: 0040349 | |
2015-04-28 14:52 | git | Note Added: 0040350 | |
2015-04-28 14:53 | mkv | Note Added: 0040351 | |
2015-04-28 14:53 | mkv | Assigned To | mkv => nbv |
2015-04-28 14:53 | mkv | Status | reviewed => feedback |
2015-04-28 15:22 | git | Note Added: 0040353 | |
2015-04-28 15:24 | nbv | Note Added: 0040354 | |
2015-04-28 15:25 | nbv | Assigned To | nbv => mkv |
2015-04-28 16:31 | mkv | Test case number | bugs modalg_5(010) bug24161 => bugs modalg_6(011) bug24161 |
2015-04-28 16:32 | mkv | Note Added: 0040365 | |
2015-04-28 16:32 | mkv | Assigned To | mkv => bugmaster |
2015-04-28 16:32 | mkv | Status | feedback => tested |
2015-05-07 11:18 | bugmaster | Changeset attached | => occt master 6b5b88d7 |
2015-05-07 11:18 | bugmaster | Status | tested => verified |
2015-05-07 11:18 | bugmaster | Resolution | open => fixed |
2015-05-07 11:33 | bugmaster | Target Version | => 6.9.0 |
2015-05-14 15:28 | aiv | Status | verified => closed |
2015-05-14 15:30 | aiv | Fixed in Version | => 6.9.0 |
2015-05-14 16:25 | git | Note Added: 0040939 |
Copyright © 2000 - 2021 MantisBT Team |