0024161: boolean operation hanging

The reason of hanging has been eliminated.

Test case for issue CR24161

Small correction of test case for this issue